# Fcmake

./: CMakeLists.txt  README.md
include/slave/: slave.h
src/master/: CMakeLists.txt  main.c
src/slave/: CMakeLists.txt  slave.c
